--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,10 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-12, windows-2022, ubuntu-20.04]
+        os:
+          - "macos-12"
+          - "ubuntu-20.04"
+#          - windows-2022
 
     steps:
       - name: Check out Git repository
