--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           npm run package
           npm run lint
+          npm run test
 
 # Failing beacuse virtual framebuffer not installed
 #          npm run build-e2e
