--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "description": "A foundation for scalable desktop apps",
-  "keywords": [
-    "electron",
-    "boilerplate",
-    "react",
-    "typescript",
-    "ts",
-    "sass",
-    "webpack",
-    "hot",
-    "reload"
-  ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
+  "description": "note-taking app",
+  "keywords": ["markdown"],
+  "homepage": "https://github.com/aviau/noteapp",
   "bugs": {
-    "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
+    "url": "https://github.com/aviau/noteapp/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
+    "url": "git+https://github.com/aviau/noteapp.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
+    "name": "Sophie Bernadin-Mercier",
+    "email": "sophiebmercier@hotmail.com",
+    "url": "https://github.com/Shuhala"
   },
   "contributors": [
     {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
+      "name": "Alexandre Viau",
+      "email": "alexandre@alexandreviau.net",
+      "url": "https://alexandreviau.net"
     }
   ],
   "main": "./src/main/main.ts",
@@ -186,8 +176,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "noteapp",
+    "appId": "net.alexandrevieu.noteapp",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
