--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "description": "note-taking app",
-  "keywords": ["markdown"],
+  "keywords": [
+    "markdown"
+  ],
   "homepage": "https://github.com/aviau/noteapp",
   "bugs": {
     "url": "https://github.com/aviau/noteapp/issues"
@@ -99,6 +101,8 @@
     }
   },
   "dependencies": {
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.3",
