--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
         os:
           - "macos-12"
           - "ubuntu-20.04"
-#          - windows-2022
+          - "windows-2022"
 
     steps:
       - name: Check out Git repository
