--- a/package.json
+++ b/package.json
@@ -102,7 +102,9 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
+    "@uiw/react-codemirror": "^4.10.4",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.3",
