buildsystem: allow imports from src/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "pretty": true,
     "sourceMap": true,
     "baseUrl": "./src",
+    "paths": {
+      "src/*": [
+        "./*",
+      ]
+    },
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
