--- a/package.json
+++ b/package.json
@@ -104,10 +104,14 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@codemirror/commands": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.0.0",
+    "@codemirror/language": "^6.2.0",
+    "@codemirror/language-data": "^6.1.0",
+    "@codemirror/state": "^6.1.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
-    "@uiw/react-codemirror": "^4.10.4",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.3",
