--- a/tauri/package.json
+++ b/tauri/package.json
@@ -21,8 +21,11 @@
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-react": "^2.0.0",
     "eslint": "^8.25.0",
+    "eslint-plugin-react": "^7.31.9",
     "typescript": "^4.6.4",
     "vite": "^3.0.2"
   }
