--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.25.0",
     "eslint-plugin-react": "^7.31.9",
     "typescript": "^4.6.4",
-    "vite": "^3.0.2"
+    "vite": "^3.0.2",
+    "vite-tsconfig-paths": "^3.5.1"
   }
 }
