--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": [
+        "./*",
+      ]
+    },
     "jsx": "react-jsx"
   },
   "include": ["src"],
