--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "lint": "eslint --ext .js,.ts,.vue src",
-    "lint:fix": "eslint --fix --ext .js,.ts,.vue src"
+    "lint": "eslint --ext .js,.ts,.vue src *.ts",
+    "lint:fix": "eslint --fix --ext .js,.ts,.vue src *.ts"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
