--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,8 @@ jobs:
       - name: Lint
         run: make lint
 
+      - name: Test
+        run: make test
+
       - name: Build
         run: make build
