--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri = { version = "1.2", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ts-rs = "6.2.1"
+anyhow = { version = "1.0.70", features = ["backtrace"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
